--- a/main/style.less
+++ b/main/style.less
@@ -18,16 +18,15 @@ html, body {
 
 .header{
     display: flex;
-    height: 7%;
+    min-height: 7%;
     padding: 1em 2em;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 13px 10px -15px grey;  
 }
 .logo {
-    //font-size: 1em;
     padding-right: 2em;
-    font-size: 18px;
+    //font-size: 18px;
 }
 .wrapper {
     &-left{
@@ -39,7 +38,7 @@ html, body {
     }
 }
 a {
-    font-size: 14px;
+    //font-size: 14px;
     text-decoration: none;
     color: @link-color;
     &:hover{
@@ -53,10 +52,10 @@ footer {
     display: flex;
     border-top: medium solid @border-color;
     padding-left: 5em;
-    font-size: 0.8em;
+    //font-size: 0.8em;
     color: darken(@border-color, 50%);
-    height: 7%;
-    font-size: 15px;
+    min-height: 7%;
+    //font-size: 15px;
 }
 main {
     flex: 1 1 auto;
@@ -66,7 +65,8 @@ main {
 }
 
 .container{
-    width: 70%;
+    min-width: 65%;
+    max-width: 90%;
     &-btn{
         width: 100%;
         float: right;
@@ -81,13 +81,14 @@ main {
         border: thin solid @border-color;
 
         &-filterName{
-            font-size: 13px;
+            //font-size: 15px;
             background-color: @label-background;
             padding: 8px;
             border-bottom: thin solid @border-color;
         }
 
         &-form{
+            //font-size: 13px;
             padding: 15px;
             &-up{
                 display: flex;
@@ -108,8 +109,8 @@ main {
                 &-left, &-right {
                     display: flex;
                     flex-wrap: wrap;
-                    gap: 15px; /* Расстояние между элементами */
-                    flex: 1 1 100%; /* Указывает равное распределение по ширине */
+                    gap: 15px;
+                    flex: 1 1 100%; 
                     width: 49%; 
                     justify-content: space-between;
                     .input{
@@ -119,22 +120,28 @@ main {
                
             }
             label{
-                font-size: 13px;
+                //font-size: 13px;
             }
 
         }
     }
     &-field{
+        //font-size: 13px;
         display: flex;
         flex-direction: column;
     }
     &-checkbox{
+        
         display: flex;
         align-items: center;
         flex-direction: row-reverse;
         position: relative;
         gap: 10px;
         margin-top: 10px;
+
+        label{
+            //font-size: 13px;
+        }
     }
 
     &-posts{
@@ -144,7 +151,7 @@ main {
             display: flex;
             justify-content: space-between;
             border: thin solid @border-color;
-            padding: 10px;
+            padding: 8px;
             border-bottom-left-radius: 3px;
             border-bottom-right-radius: 3px;
 
@@ -169,7 +176,7 @@ main {
                 width: 100%;
 
                 .pretitle{
-                    font-size: 14px;
+                    //font-size: 13px;
                 }
                 .post-title{
                     margin-top: 10px;
@@ -179,15 +186,15 @@ main {
                 padding-top: 15px;
                 .post-description{
                     padding-bottom: 15px;
-                    font-size: 15px;
+                    //font-size: 13px;
                 }
                 .post-tags{
-                    font-size: 13px;
+                    //font-size: 13px;
                     color: @grey;
                     padding-bottom: 5px;
                 }
                 .post-time{
-                    font-size: 14px;
+                    //font-size: 14px;
                 }
             }
             
@@ -197,11 +204,14 @@ main {
     &-down{
         display: flex;
         justify-content: space-between;
-        text-align: center;
+        align-items: center;
+        margin-bottom: 40px;
+        margin-top: 10px;
     }
 }
+
 .post-btn {
-    font-size: 12px;
+    //font-size: 12px;
     border: thin solid @border-color;
     cursor: pointer;
     display: inline-block;
@@ -218,7 +228,7 @@ main {
 }
 
 .do-btn {
-    font-size: 12px;
+    //font-size: 12px;
     border: thin solid @border-color;
     cursor: pointer;
     display: inline-block;
@@ -231,12 +241,18 @@ main {
         background-color: darken(@blue, 5%);
     }
 }
+.image-button{
+    border: none;
+    margin-top: 5px;
+    background-color: @label-background;
+
+}
 
 input, select, .checkbox{
     border: thin solid darken(@border-color, 10%);
     border-radius: 3px;
-    font-size: 13px;
-    
+    //font-size: 11px;
+    width: auto;
    
 }
 .tags{
@@ -245,18 +261,16 @@ input, select, .checkbox{
     padding-left: 10px;
 }
 .input, .postSorting {
-    padding: 6px;
+    width: auto;
+    padding: 5px;
 }
 
 .pagination {
-    margin-top: 10px;
     a {
-        //font-size: 14px;
         color: @blue;
         float: left;
         padding: 6px 8px;
         text-decoration: none;
-        transition: background-color .3s;
         border: thin solid @blue;
         border-radius: 2px;
         
@@ -269,23 +283,33 @@ input, select, .checkbox{
     
 }
 .count-post{
-    margin-top: 10px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    &-select{
+        padding: 5px;
+        width: 100%;
+    }
+    &-label{
+        //font-size: 11px;
+    }
 }
 
-#comment, #heart, #love{
-    height: 18px;
-    width: 18px;
+#comment, #like{
+    height: 15px;
+    width: 15px;
 }
 .dropdown-content {
+    //font-size: 13px;
     display: none;
     position: absolute;
     background-color: white;
     border: thin solid darken(@border-color, 10%);
     border-radius: 5px;
     margin-top: 10px;
-    min-width: 150px;
+    margin-right: 150px;
+    min-width: 130px;
     z-index: 10;
 
     a{
@@ -302,21 +326,26 @@ input, select, .checkbox{
     display: block;
 }
 
-.user-menu-email {
-    color: black; 
-    cursor: pointer; 
-    display: inline-block; 
-    
-    margin-right: 5px; 
-    &:hover .dropdown-content {
-        display: block; 
-        position: relative;
+.user-menu {
+    //font-size: 14px;
+   // margin-right: 50px;
+    &-email {
+        color: black; 
+        cursor: pointer; 
+        display: inline-block; 
+        
+        margin-right: 5px; 
+        &:hover .dropdown-content {
+            display: block; 
+            position: relative;
+        }
     }
 }
+
 .dropdown-arrow {
     color: black; 
     cursor: pointer; 
-    font-size: 0.5em; 
+    //font-size: 0.5em; 
     vertical-align: middle; 
 }
 #rightMenu {
