fixed tag's filter and added show more button on posts

--- a/main/style.less
+++ b/main/style.less
@@ -216,6 +216,15 @@ main {
     max-width: 500px;
     max-height: 500px;
 }
+.show-more-btn{
+    border: none;
+    background-color: white;
+    font-size: 15px;
+    display: block;
+    cursor: pointer;
+    color: @blue;
+    margin-top: 3px;
+}
 
 .post-btn {
     //font-size: 12px;
