added correct url and fixed pagination

--- a/main/style.less
+++ b/main/style.less
@@ -282,8 +282,7 @@ input, select, .checkbox{
 }
 
 .pagination {
-    button {
-        
+    a {
         padding: 5px 10px;
         border: 1px solid @blue;
         border-radius: 3px;
@@ -320,6 +319,7 @@ input, select, .checkbox{
     height: 15px;
     width: 15px;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -344,6 +344,7 @@ input, select, .checkbox{
 .dropdown-content.visible {
     display: block;
 }
+
 
 .user-menu {
     &-email {
