fixed likes and done main page

--- a/main/style.less
+++ b/main/style.less
@@ -177,6 +177,7 @@ main {
                 }
                 .post-title{
                     margin-top: 10px;
+                    cursor: pointer;
                 }
             }
             .down{
