fixed the display of the comment block on the post page

--- a/postPage/style.less
+++ b/postPage/style.less
@@ -152,7 +152,10 @@ main {
 
         &-box{
             padding-top: 10px;
-            margin-bottom: 30px;
+
+            .show-more-button{
+                margin-bottom: 20px;
+            }
 
             .pretitle{
                 margin-bottom: 10px;
@@ -194,6 +197,7 @@ main {
             height: 100px;
             display: block;
             margin-top: 5px;
+            padding: 10px;
         }
         .send{
             border: thin solid @border-color;
