--- a/createPost/style.less
+++ b/createPost/style.less
@@ -119,14 +119,42 @@ main {
                 width: 100%;
             }
         }
-        &-third{
+    }
+    &-address{
+        display: flex;
+        width: 100%;
+        gap: 25px;
+        .container-field{
+            display: flex;
+            gap: 5px;
+            flex-direction: column;
+            margin-top: 10px;
+            width: 100%;
 
         }
-        
+    }
+    .create-btn {
+        border: thin solid @border-color;
+        cursor: pointer;
+        display: inline-block;
+        margin-top: 15px;
+        margin-left: auto;
+        padding: 0.6em;
+        background-color: @blue;
+        color: white;
+        border-radius: 4px;
+        float: right;
+        &:hover{
+            background-color: darken(@blue, 5%);
+        }
     }
 
 }
-.input, .community, .tags{
+.address{
+    margin-top: 15px;
+    margin-right: auto;
+}
+.input, .community, .tags, .select{
     padding: 0.5em;
     border-radius: 4px;
     border: thin solid darken(@border-color, 10%);
