--- a/createPost/style.less
+++ b/createPost/style.less
@@ -66,7 +66,7 @@ main {
     max-width: 90%;
     display: flex;
     align-content: center;
-    margin-top: 50px;
+    margin-top: 4%;
     margin-bottom: 50px;
     align-items: center;
     flex-direction: column;
@@ -120,19 +120,7 @@ main {
             }
         }
     }
-    &-address{
-        display: flex;
-        width: 100%;
-        gap: 25px;
-        .container-field{
-            display: flex;
-            gap: 5px;
-            flex-direction: column;
-            margin-top: 10px;
-            width: 100%;
-
-        }
-    }
+    
     .create-btn {
         border: thin solid @border-color;
         cursor: pointer;
@@ -148,7 +136,24 @@ main {
             background-color: darken(@blue, 5%);
         }
     }
+    
 
+}
+.address-container{
+
+    width: 100%;
+    //gap: 25px;
+    .container-field {
+        display: flex;
+        gap: 5px;
+        flex-direction: column;
+        margin-top: 10px;
+        width: 100%;
+        .select2{
+            flex: 1; /* Растягиваем Select2 по ширине родителя */
+        }
+        
+    }
 }
 .address{
     margin-top: 15px;
