done authors page

--- a/communities/style.less
+++ b/communities/style.less
@@ -19,7 +19,7 @@ html, body {
 
 .header{
     display: flex;
-    min-height: 7%;
+    height: 7%;
     padding: 1em 2em;
     justify-content: space-between;
     align-items: center;
