--- a/createPost/style.less
+++ b/createPost/style.less
@@ -149,32 +149,21 @@ main {
     width: 100%;
   }
   
-  .select2-container {
-    width: 100% !important;
-    max-width: 100%; 
-    box-sizing: border-box; 
-  }
-  
-  .select2-selection {
-    width: 100% !important;
-    box-sizing: border-box;
-  }
+.addresses{
+    width: 100%;
+}
 
   .address-container {
     width: 100%;
     max-width: 100%; 
+    //max-width: 800px; 
+    margin: 0 auto;
+    position: relative;
     box-sizing: border-box;
     margin-top: 15px;
   }
 
-  .select2-container .select2-dropdown {
-    width: 50%;
-  }
-  
-  /* Убираем скроллинг страницы при открытии меню */
-  body .select2-container .select2-dropdown {
-    overflow: visible;
-  }
+
 .address{
     margin-top: 15px;
     margin-right: auto;
@@ -189,6 +178,10 @@ textarea{
     padding: 0.5em;
     border-radius: 4px;
     border: thin solid darken(@border-color, 10%);
+}
+.select2{
+    //position: inherit;
+    width: 100%;
 }
 
 .dropdown-content {
