--- a/createPost/style.less
+++ b/createPost/style.less
@@ -215,8 +215,10 @@ textarea{
         color: black; 
         cursor: pointer; 
         display: inline-block; 
-        
         margin-right: 5px; 
+        &:hover{
+            color: @blue;
+        }
         &:hover .dropdown-content {
             display: block; 
             position: relative;
@@ -227,8 +229,10 @@ textarea{
 .dropdown-arrow {
     color: black; 
     cursor: pointer; 
+    font-size: 0.5em; 
     vertical-align: middle; 
 }
+
 #rightMenu {
     position: relative;
 }
