--- a/authorization/style.less
+++ b/authorization/style.less
@@ -20,7 +20,7 @@ html, body {
 .header{
     display: flex;
     padding: 1em 2em;
-    height: 7%;
+    min-height: 7%;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 13px 10px -15px grey;  
@@ -53,9 +53,9 @@ footer {
     display: flex;
     border-top: medium solid @border-color;
     padding-left: 5em;
-    font-size: 0.8em;
+    //font-size: 0.8em;
     color: darken(@border-color, 50%);
-    height: 8%;
+    min-height: 8%;
     font-size: 15px;
 }
 main {
