--- a/authors/style.less
+++ b/authors/style.less
@@ -18,7 +18,7 @@ html, body {
 
 .header{
     display: flex;
-    height: 7%;
+    min-height: 7%;
     padding: 1em 2em;
     justify-content: space-between;
     align-items: center;
@@ -158,8 +158,10 @@ main {
         color: black; 
         cursor: pointer; 
         display: inline-block; 
-        
         margin-right: 5px; 
+        &:hover{
+            color: @blue;
+        }
         &:hover .dropdown-content {
             display: block; 
             position: relative;
@@ -170,5 +172,6 @@ main {
 .dropdown-arrow {
     color: black; 
     cursor: pointer; 
+    font-size: 0.5em; 
     vertical-align: middle; 
 }
