--- a/createPost/style.less
+++ b/createPost/style.less
@@ -25,6 +25,7 @@ html, body {
     box-shadow: 0px 13px 10px -15px grey;  
 }
 .logo {
+    font-size: 19px;
     padding-right: 2em;
 }
 .wrapper {
