--- a/profile/style.less
+++ b/profile/style.less
@@ -19,16 +19,15 @@ html, body {
 
 .header{
     display: flex;
-    height: 7%;
+    min-height: 7%;
     padding: 1em 2em;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 13px 10px -15px grey;  
 }
 .logo {
-    font-size: 18px;
     padding-right: 2em;
-    font-size: 20px;
+    font-size: 19px;
 }
 .wrapper {
     &-left{
@@ -55,7 +54,7 @@ footer {
     padding-left: 5em;
     font-size: 0.8em;
     color: darken(@border-color, 50%);
-    height: 8%;
+    height: 7%;
     font-size: 15px;
 }
 main {
