--- a/authors/style.less
+++ b/authors/style.less
@@ -176,3 +176,14 @@ main {
     font-size: 0.5em; 
     vertical-align: middle; 
 }
+@media(max-width: 1000px){
+    .container{
+        width: 95%;
+        &-authors{
+            &-card{
+                height: 150px;
+            }
+        }
+        
+    }
+}
