--- a/registration/style.less
+++ b/registration/style.less
@@ -20,7 +20,7 @@ html, body {
 .header{
     display: flex;
     padding: 1em 2em;
-    height: 7%;
+    min-height: 7%;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 13px 10px -15px grey;  
@@ -141,12 +141,15 @@ p{
         background-color: darken(@blue, 5%);
     }
 }
-@media(max-width: 800px){
+@media(max-width: 1024px){
     .container{
-        width: 100%;
+        width: 80%;
         height: auto;
         &-register{
             font-size: 30px;
+        }
+        .form {
+            gap: 20px;
         }
     }
     input, label, button, select{
