fixed edit button and added check token expired

--- a/postPage/style.less
+++ b/postPage/style.less
@@ -147,12 +147,14 @@ main {
             }
 
             .pretitle{
+                font-size: 13px;
                 margin-bottom: 10px;
                 display: flex;
                 gap: 10px;
             }
             .content{
                 margin-bottom: 10px;
+                //font-size: 15px;
 
                 .modified-date{
                     color: @grey;
