added alerts on validations

--- a/postPage/style.less
+++ b/postPage/style.less
@@ -103,6 +103,7 @@ main {
                 padding-top: 15px;
                 .post-description{
                     padding-bottom: 15px;
+                    overflow-wrap: break-word;
                 }
                 .post-tags{
                     color: @grey;
