--- a/communityPage/style.less
+++ b/communityPage/style.less
@@ -78,6 +78,7 @@ main {
         border-radius: 4px;
         border: thin solid @border-color;
         &-title{
+            overflow-wrap: break-word; 
             display: flex;
             margin-top: 5px;
             justify-content: space-between;
@@ -277,7 +278,6 @@ main {
             
 
             .upper{
-                
                 padding-bottom: 10px;
                 border-bottom: 2px solid @border-color;
                 width: 100%;
@@ -286,6 +286,7 @@ main {
                     //font-size: 13px;
                 }
                 .post-title{
+                    overflow-wrap: break-word; 
                     margin-top: 10px;
                     cursor: pointer;
                 }
