--- a/main/style.less
+++ b/main/style.less
@@ -157,11 +157,11 @@ main {
             
 
             .upper{
-                
                 padding-bottom: 10px;
                 border-bottom: 2px solid @border-color;
                 width: 100%;
                 .post-title{
+                    overflow-wrap: break-word; 
                     margin-top: 10px;
                     cursor: pointer;
                 }
