--- a/postPage/style.less
+++ b/postPage/style.less
@@ -90,12 +90,12 @@ main {
             padding: 15px;
             border: thin solid @border-color;
             .upper{
-                
                 padding-bottom: 10px;
                 border-bottom: 2px solid @border-color;
                 width: 100%;
 
                 .post-title{
+                    overflow-wrap: break-word; 
                     margin-top: 10px;
                 }
             }
